template.yaml
#AWSTemplateFormatVersion: 2010-09-09
Description: A 3-node Hadoop cluster and its associated security groups
Parameters:
  VPNPublicIP:
    Description: Public IP of VPN used to connect to Web UI
    Type: String
    Default: 0.0.0.0/0  # All
  VPCCidr:
    Description: IPv4 CIDR of AWS VPC
    Type: String
  KeyName:
    Description: EC2 key-pair to SSH on instance
    Type: AWS::EC2::KeyPair::KeyName
  MasterInstanceType:
    Description: EC2 instance type for Master node
    Type: String
    Default: t3.medium
  SlaveInstanceType:
    Description: EC2 instance type for Slave nodes
    Type: String
    Default: t3.medium
  BaseImage:
    Description: Image ID for creating instance
    Type: String
    Default: ami-08d658f84a6d84a80  # Ubuntu Server 18.04 LTS x86_64
Resources:
  MasterNode:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType:
        Ref: MasterInstanceType
      ImageId:
        Ref: BaseImage
      SecurityGroups:
        - !Ref MasterSecurityGroup
        - !Ref SSHSecurityGroup
      Tags:
        -
          Key: Name
          Value: Hadoop-Master
  SlaveNode1:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType:
          Ref: SlaveInstanceType
      ImageId:
        Ref: BaseImage
      SecurityGroups:
        - !Ref SlaveSecurityGroup
        - !Ref SSHSecurityGroup
      Tags:
        -
          Key: Name
          Value: Hadoop-Slave-1
  SlaveNode2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType:
          Ref: SlaveInstanceType
      ImageId:
        Ref: BaseImage
      SecurityGroups:
        - !Ref SlaveSecurityGroup
        - !Ref SSHSecurityGroup
      Tags:
        -
          Key: Name
          Value: Hadoop-Slave-2
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SSH
      GroupDescription: Enable SSH access
      SecurityGroupIngress:
        - CidrIp: !ref VPNPublicIp
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
  MasterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: hadoop-master
      GroupDescription: Configure ports to allow basic Hadoop usage.
      SecurityGroupIngress:
        - CidrIp: !ref VPNPublicIp
          IpProtocol: tcp
          Description: Web UI for HDFS Name node
          FromPort: 9870
          ToPort: 9870
        - CidrIp: !ref VPCCidr 
          IpProtocol: tcp
          Description: Metadata operations
          FromPort: 9000
          ToPort: 9000
        - CidrIp: !ref VPCCidr 
          IpProtocol: tcp
          Description: Name Node backup
          FromPort: 9868
          ToPort: 9868                
  SlaveSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: hadoop-slave
      GroupDescription: Configure ports to allow basic Hadoop usage.
      SecurityGroupIngress:
        - CidrIp: !ref VPNPublicIp
          IpProtocol: tcp
          Description: Web UI for HDFS Data node
          FromPort: 9864
          ToPort: 9864
        - CidrIp: !ref VPCCidr
          IpProtocol: tcp
          Description: Data Transfer between slave nodes
          FromPort: 9866
          ToPort: 9866
        - CidrIp: !ref VPCCidr
          IpProtocol: tcp
          Description: Metadata operations
          FromPort: 9867
          ToPort: 9867                
  MasterNodeIPAddress:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  MasterNodeIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref MasterNode
      EIP: !Ref MasterNodeIPAddress
  SlaveNode1IPAddress:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  SlaveNode1IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref SlaveNode1
      EIP: !Ref SlaveNode1IPAddress
  SlaveNode2IPAddress:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  SlaveNode2IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref SlaveNode2
      EIP: !Ref SlaveNode2IPAddress            
Outputs:
  MasterNodeInstanceId:
    Description: InstanceId of the MasterNode EC2 instance
    Value: !Ref MasterNode
  MasterNodeInstanceIPAddress:
    Description: IP address of the MasterNode EC2 instance
    Value: !Ref MasterNodeIPAddress
